working on the auto-complete section

--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -102,22 +102,12 @@ $weekend-blue: #eaf7ff
 .classicGridDateCol
   width: 6rem
   height: 100%
-  // display: flex
-  // flex-direction: column
-  // justify-content: flex-start
-  // align-items: center
   border-right: 0.0625rem solid $light-grey
-  // border: 0.0625rem solid $light-grey
-  // border-top-width: 0
-  // border-bottom-width: 0
-  // border-right-color: $light-grey
-  // border-right-style: solid
-  // border-right-width: 0.0625rem
-
 
 .classicGridPersonCol
   width: 6.3rem
   height: 100%
+  display: block
 
 .AM,.PM, .classicGridPersonName, .classicGridDayName, .classicGridMonthName, .classicGridDayNum
   height: 1.5rem
