tweaked some of the sample data

--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -172,9 +172,10 @@ $more-blue: #1361dd
   display: flex
   flex-direction: row
   justify-content: flex-start
-  align-content: center
   align-items: center
+  height: 100%
   textarea
+    height: 98%
     margin: 0
     padding: 0
     border: 0.0625rem solid $light-grey
@@ -186,7 +187,7 @@ $more-blue: #1361dd
   .noteSubmitButton
     margin: 0
     padding: 0 5px 0 0
-    height: 109px
+    height: 100%
     background-color: $white
     border: 0.0625rem solid $light-grey
     border-radius: 5px
